methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:20: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
      faireV()
            ^MethodsPicture:23: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireV();avance();gauche();avance();avance();avance();gauche()
          ^